# ckad-practice-tool

./: README.md
ai/chaos_agent/: .env.example  .gitignore  README.md  pyproject.toml
ai/chaos_agent/src/chaos_agent/: main.py
ai/chaos_agent/src/chaos_agent/graph/: __init__.py  build_graph.py  state.py
ai/chaos_agent/src/chaos_agent/graph/nodes/: __init__.py  apply_mutations.py  design_mutations.py  generate_challenge.py  initialize_state.py  present_challenge.py  provide_feedback.py  reset_cluster.py  verify_solution.py  wait_for_user.py
ai/chaos_agent/src/chaos_agent/tools/: __init__.py  kubectl_wrapper.py
docker/: Dockerfile  kind-config.yaml  start.sh
docker/kubernetes/: backend-deployment.yaml  frontend-deployment.yaml
kubernetes/: backend-deployment.yaml  frontend-deployment.yaml  namespace.yaml
scripts/: connect.sh  start-env.sh
webapp/: package-lock.json  package.json  server.js
webapp/data/: questions.json
webapp/public/: app.js  index.html  styles.css
